# J2S

./: .gitignore  .travis.yml  README.md  j2s.cabal  stack.yaml
examples/nim/: LICENSE  README.md  nim.cabal  stack.yaml
examples/nim/app/: Main.hs
examples/nim/src/: Nim.hs
examples/nim/src/Nim/: AI.hs  Core.hs  TextIO.hs  Types.hs
src/: J2S.hs
src/Data/: NLTree.hs
src/J2S/: AI.hs  Engine.hs
src/J2S/AI/: EvalAll.hs  MaxN.hs  MinMax.hs  Random.hs  Types.hs
src/J2S/Game/: Nim.hs
src/J2S/Game/Nim/: AI.hs  Core.hs  TextIo.hs  Types.hs
test/: DocTest.hs  Main.hs
test/J2S/: AITest.hs
test/J2S/AI/: MinMaxTest.hs  RandomTest.hs
test/J2S/Game/: Mock.hs
