name:                j2s
version:             0.1.0.0
synopsis:            A core library for boardgame design
homepage:            https://github.com/berewt/j2s
license:             MIT
license-file:        LICENSE
author:              Nicolas Biri
maintainer:          nicolas@biri.name
category:            Game
build-type:          Simple
stability: experimental
cabal-version:       >=1.18

source-repository head
  type: git
  location: git@github.com:berewt/j2s.git

-- configuration for building a library
library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Data.NLTree
    J2S
    J2S.Game.Nim
  other-modules:
    J2S.AI
    J2S.Engine
    J2S.AI.Types
    J2S.AI.MaxN
    J2S.AI.MinMax
    J2S.AI.Random
    J2S.Game.Nim.AI
    J2S.Game.Nim.Core
    J2S.Game.Nim.Types
    J2S.Game.Nim.TextIO
  ghc-options: -Wall
  build-depends:
    base                   >= 4    && < 5
    , containers           >= 0.5  && < 0.6
    , either               >= 4.3  && < 4.4
    , free                 >= 4.10 && < 4.11
    , QuickCheck           >= 2.7  && < 2.8
    , lens                 >= 4.7  && < 4.8
    , monad-loops          >= 0.4  && < 0.5
    , MonadRandom          >= 0.3  && < 0.4
    , mtl                  >= 2.2  && < 2.3
    , nats                 >= 1    && < 2
    , random               >= 1.1  && < 1.2
    , recursion-schemes    >= 4.1  && < 5
    , semigroups           >= 0.16 && < 0.17
    , text                 >= 1.2  && < 1.3
    , transformers         >= 0.4  && < 0.5
    , zippers              >= 0.2  && < 0.3

-- doctests
test-suite test
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  ghc-options:    -threaded
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:  
    base                         >= 4     && < 5
    , HUnit                      >= 1.2   && < 1.3
    , QuickCheck                 >= 2.7   && < 2.8
    , test-framework             >= 0.8   && < 0.9
    , test-framework-hunit       >= 0.3   && < 0.4
    , test-framework-quickcheck2 >= 0.3   && < 0.4
