name:                j2s
version:             0.2.0
synopsis:            A core library for boardgame design
homepage:            https://github.com/berewt/j2s
license:             MIT
license-file:        LICENSE
author:              Nicolas Biri
maintainer:          nicolas@biri.name
category:            Game
build-type:          Simple
stability: experimental
cabal-version:       >=1.18

source-repository head
  type: git
  location: git@github.com:berewt/j2s.git

-- configuration for building a library
library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Data.NLTree
    J2S
  other-modules:
    J2S.AI
    J2S.Engine
    J2S.AI.Types
    J2S.AI.MaxN
    J2S.AI.MinMax
    J2S.AI.Random
  ghc-options: -Wall
  build-depends:
    base                   >= 4.8  && < 5
    , containers           >= 0.5  && < 0.6
    , either               >= 4.3  && < 4.5
    , free                 >= 4.10 && < 4.13
    , QuickCheck           >= 2.7  && < 2.10
    , lens                 >= 4.8  && < 4.16
    , monad-loops          >= 0.4  && < 0.5
    , MonadRandom          >= 0.3  && < 0.5
    , mtl                  >= 2.2  && < 2.3
    , nats                 >= 1    && < 2
    , random               >= 1.1  && < 1.2
    , recursion-schemes    >= 4.1  && < 5.1
    , semigroups           >= 0.16 && < 0.19
    , text                 >= 1.2  && < 1.3
    , transformers         >= 0.4  && < 0.6
    , zippers              >= 0.2  && < 0.3

-- doctests
test-suite test
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    J2S.AI.RandomTest
    J2S.AITest
    J2S.Game.Mock
  hs-source-dirs: test
  build-depends:
    j2s
    , base                       >= 4.8   && < 5
    , either                     >= 4.3   && < 4.5
    , QuickCheck                 >= 2.7   && < 2.10
    , MonadRandom                >= 0.3  && < 0.5
    , mtl                        >= 2.2   && < 2.3
    , nats                       >= 1     && < 2
    , random                     >= 1.1   && < 1.2
    , semigroups                 >= 0.16  && < 0.19
    , test-framework             >= 0.8   && < 0.9
    , test-framework-quickcheck2 >= 0.3   && < 0.4
